--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 	</head>
 
 	<body class="liste">
-		<!-- ici une nav bar de bootstrap -->
 		<nav class="navbar navbar-expand-lg bg-warning">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="/">
@@ -91,7 +90,7 @@
 
 		<div class="container mt-5">
 			<div class="row justify-content-center" id="container"></div>
-			<div id="favorisContainer" class="row justify-content-center"></div>
+			<div id="listeContainer" class="row justify-content-center"></div>
 		</div>
 
 		<footer>
