--- a/index.html
+++ b/index.html
@@ -42,48 +42,20 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Home</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Link</a>
+							<a
+								class="nav-link nav-link disabled"
+								aria-current="page"
+								aria-disabled="true"
+								href="/"
+								>Home</a
+							>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link favoris" href="favoris.html#favorisContainer"
 								>Favoris</a
 							>
 						</li>
-						<!-- <li class="nav-item dropdown">
-							<a
-								class="nav-link dropdown-toggle"
-								href="#"
-								role="button"
-								data-bs-toggle="dropdown"
-								aria-expanded="false"
-							>
-							</a> -->
-
-						<!-- <ul class="dropdown-menu">
-								<li><a class="dropdown-item" href="#">Humour</a></li>
-								<li><a class="dropdown-item" href="#">Action</a></li>
-								<li><hr class="dropdown-divider" /></li>
-								<li>
-									<a class="dropdown-item" href="#">Documentaires</a>
-								</li>
-							</ul> -->
-						<!-- </li> -->
-						<li class="nav-item">
-							<a class="nav-link disabled" aria-disabled="true">Disabled</a>
-						</li>
 					</ul>
-					<!-- <form class="d-flex" role="search">
-						<input
-							class="form-control me-2"
-							type="search"
-							placeholder="Search"
-							aria-label="Search"
-							id="champ1"
-						/>
-					</form> -->
 				</div>
 			</div>
 		</nav>
